<resources>
    <string name="app_name">ChoreScore</string>

    <!--Button Text -->
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="about">About</string>
    <string name="goBack">Go Back</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="new_group">Create a New Group</string>
    <string name="join_group">Join Group</string>
    <string name="join_a_group">Join a Group</string>
    <string name="invite_to_group">Invite a Friend To Group</string>
    <string name="view_group">View Group</string>
    <string name="make_default_group">Make Default Group</string>
    <string name="search">Search</string>
    <string name="add_chore">Add Chore To List</string>
    <string name="manage_chores">Manage Chores</string>
    <string name="add_selected">Add Chore</string>
    <string name="take_picture">Take Picture</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="view_chores">View Chores</string>
    <string name="review_chores">Review Completed Chores</string>
    <string name="current_groups_btn">Current Groups</string>
    <string name="leave_group_btn">Leave Group</string>
    <string name="manual_btn">User Manual</string>

    <!-- TextViews -->
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="email">E-mail:</string>
    <string name="password_only">Password:</string>
    <string name="password">Select Password*:</string>
    <string name="confirm_password">Confirm Password*:</string>
    <string name="username_only">Username:</string>
    <string name="username">Select Username*:</string>
    <string name="about_content_1">The ChoreScore app provides a way for you and your house mates
        to organize what chores need to be done.  </string>
    <string name="about_content_2">ChoreScore provides a points-based platform
        that makes completing chores fun! \n\nThe best part is, your group gets to decide what redeeming points earns them!</string>
    <string name="select_group_name">Select a Group Name:</string>
    <string name="current_groups">Current Groups:</string>
    <string name="members_label">Members:</string>
    <string name="admin_label">Admin:</string>
    <string name="number_of_users">Number of Users:</string>
    <string name="number_of_chores">Chores Completed:</string>
    <string name="number_of_groups">Number of Groups:</string>
    <string name="join_chore_score">Join the Growing ChoreScore Community!</string>
    <string name="search_results">Search Results:</string>
    <string name="group_name">Group Name:</string>
    <string name="title">Name:</string>
    <string name="redemption_amount">Amount to Redeem:</string>
    <string name="redeem">Redeem Now!</string>
    <string name="chore_description">Description:</string>
    <string name="chore_points">Points:</string>
    <string name="points">Points</string>
    <string name="chore_name">Description</string>
    <string name="due_date">Due Date</string>
    <string name="review_username">Completed By</string>
    <string name="chore_total_points">Total Points:</string>
    <string name="chore_current_points">Current Points:</string>
    <string name="chore_due_date">Due Date:</string>


    <!-- Activity Titles -->
    <string name="title_activity_about">About</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_current_groups">Current Groups</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="title_activity_join_group">Join Group</string>
    <string name="title_activity_invite_to_group">Invite To Group</string>
    <string name="title_activity_view_group">View Group</string>
    <string name="title_activity_pending_chores">Pending Chores</string>
    <string name="title_activity_select_chores">Add Chore</string>
    <string name="title_activity_group_details">Group Details</string>
    <string name="title_activity_chore_details">Chore Details</string>
    <string name="title_activity_point_summary">Point Summary</string>
    <string name="title_activity_point_redemption">Point Redemption</string>
    <string name="title_activity_review_chores">Review Chores</string>
    <string name="title_activity_view_group_member">Group Details</string>

    <!-- Menu Item Titles -->
    <string name ="group_menu_title">Groups</string>
    <string name ="logout_menu_title">Logout</string>
    <string name ="chores_menu_title">Chores</string>
    <string name ="points_menu_title">Points</string>
    <string name ="home_menu_title">Home</string>


    <!-- Edit Text -->
    <string name ="enter_search">Enter Search Keywords Here</string>
	
	<!-- User and Group error strings -->
    <!-- Note: \u0020 is a space character for leading/trailing spaces -->
    <string name="error_password_match">Your confirmation password must be identical to your original password.</string>
    <string name="error_password_length">Password must be at least \u0020</string>
    <string name="error_user_length">User name must be at least \u0020</string>
    <string name="error_group_name_length">Group name must be at least \u0020</string>
    <string name="error_characters_long">\u0020 characters long.</string>
    <string name="error_group_name_taken">Group name in use</string>
    <string name="error_already_in_group">You have already joined this group.</string>
    <string name="error_add_chore">You are not authorized to create a chore.</string>
    <string name="error_review_chore">You are not authorized to review a chore.</string>
    <string name="error_description_length">Description must be between \u0020 </string>
    <string name="and"> and \u0020</string>
    <string name="error_date_before">Due date must not be before the current date.</string>
    <string name="error_no_group">You must join a group to use this feature.</string>
    <string name="error_points_zero">Points must not be 0.</string>

    <!-- Success messages -->
    <string name="success_add_chore">Chore added!</string>
    <string name="success_logout">Logged out</string>
    <string name="success_group">Current group set to:\u0020</string>
    <string name="success_group_joined">You have joined the group!</string>

    <!-- Dialog boxes -->
    <string name="dialog_submit_chore_title">Submit Chore</string>
    <string name="dialog_submit_chore_message">Upload a picture showing your completed task to earn points.</string>
    <string name="dialog_okay">Okay</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_approve_chore">Approve</string>
    <string name="dialog_deny_chore">Deny</string>
    <string name="dialog_approve_chore_title">Reviewing Chore</string>
    <string name="dialog_approve_chore_message">Press approve to reward points. Press deny if the chore was not properly completed.</string>

    <!-- Notification Strings -->
    <string name="notification_redeemed">\u0020 redeemed \u0020</string>
    <string name="notification_points">\u0020 points.</string>

</resources>
