<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ndpt.chorescore.CurrentGroupsButtonsFragment"
    android:orientation="vertical">

    <Button style="@style/ButtonStyle"
        android:text="@string/new_group"
        android:id="@+id/btnCurrentGroupsNew"/>

    <Button style="@style/ButtonStyle"
        android:text="@string/join_a_group"
        android:id="@+id/btnCurrentGroupsJoin"/>

    <Button style="@style/ButtonStyle"
        android:text="@string/view_group"
        android:id="@+id/btnCurrentGroupsView"/>

    <Button style="@style/ButtonStyle"
        android:text="@string/view_chores"
        android:id="@+id/btnCurrentGroupsViewChores"/>

    <Button style="@style/ButtonStyle"
        android:text="@string/redeem_points"
        android:id="@+id/btnCurrentGroupsRedeemPoints"/>
</LinearLayout>
