<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/tv_review_chores_name"
            android:layout_height="wrap_content"
            android:text="@string/chore_name"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/tv_review_chores_points"
            android:layout_height="wrap_content"
            android:text="@string/points"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/tv_review_chores_user"
            android:layout_height="wrap_content"
            android:text="@string/review_username"/>

    </LinearLayout>
    <ListView
        android:id="@+id/lv_review_chores"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>


</LinearLayout>