<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ndpt.chorescore.ViewGroupDisplayFragment"
    android:orientation="vertical">

    <TextView style="@style/TextViewStyle"
        android:id="@+id/tv_view_group_name_label"
        android:text="@string/group_name"
        android:layout_width="200dp"
        android:textSize="20sp"/>

    <TextView style="@style/TextViewStyle"
        android:id="@+id/tv_view_group_name_display"
        android:layout_marginLeft="10dp"
        />

    <TextView style="@style/TextViewStyle"
        android:id="@+id/tv_view_group_admin_label"
        android:text="@string/admin_label"
        android:layout_width="200dp"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <TextView style="@style/TextViewStyle"
        android:id="@+id/tv_view_group_admin_display"
        android:layout_marginLeft="10dp"
        />

    <TextView style="@style/TextViewStyle"
        android:id="@+id/tv_view_group_count_label"
        android:text="@string/members_label"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <ListView
        android:id="@+id/lv_group_members"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>

</LinearLayout>