<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ndpt.chorescore.MainUsageDisplayFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        >

        <TextView style="@style/TextViewStyle"
            android:id="@+id/tv_main_usage_join"
            android:text="@string/join_chore_score"
            android:textSize="20sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >

        <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_main_usage_users"
        android:text="@string/number_of_users"
        android:textSize="20sp"/>

        <TextView style="@style/TextViewStyle"
            android:id="@+id/tv_main_usage_user_count"
            android:textSize="20sp"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_main_usage_groups_label"
            android:text="@string/number_of_groups"
            android:textSize="20sp"/>

        <TextView style="@style/TextViewStyle"
            android:id="@+id/tv_main_usage_groups_count"
            android:textSize="20sp"
            android:gravity="right"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_main_usage_chores_complete"
            android:text="@string/number_of_chores"
            android:textSize="20sp"/>

        <TextView style="@style/TextViewStyle"
            android:id="@+id/tv_main_usage_chore_count"
            android:textSize="20sp"
            android:gravity="right"/>

    </LinearLayout>

</LinearLayout>
