<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ndpt.chorescore.PendingChoresListviewFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:id="@+id/tv_pending_chores_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/chore_name"
            />
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/tv_pending_chores_points"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/points"
            />
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/tv_pending_chores_due"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/due_date"
            />

    </LinearLayout>
    <ListView
        android:id="@+id/lv_pending_chores"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>
