<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ndpt.chorescore.ChoreDescriptionFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="20sp" >

        <TextView style="@style/TextViewStyle"
            android:id="@+id/tv_chore_desc_name_label"
            android:textSize="20sp"
            android:text="@string/title"/>

        <TextView style="@style/TextViewStyle"
            android:textSize="20sp"
            android:id="@+id/tv_chore_desc_name"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20sp" >

        <TextView style="@style/TextViewStyle"
            android:id="@+id/tv_chore_desc_date_label"
            android:textSize="20sp"
            android:text="@string/due_date"/>

        <TextView style="@style/TextViewStyle"
            android:textSize="20sp"
            android:id="@+id/tv_chore_desc_due_date"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20sp" >

        <TextView style="@style/TextViewStyle"
            android:id="@+id/tv_chore_desc_points_label"
            android:textSize="20sp"
            android:text="@string/points"/>

        <TextView style="@style/TextViewStyle"
            android:textSize="20sp"
            android:id="@+id/tv_chore_desc_points"/>

    </LinearLayout>
    

</LinearLayout>
