<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.ndpt.chorescore.SignupSecurityFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/tvUsername"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/etUsername"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/tvPassword"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/etPassword"
			android:inputType="textPassword"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:id="@+id/tvConfirmPassword"
            android:layout_weight="1"/>

        <EditText style="@style/TextViewStyle"
            android:layout_weight="2"
            android:id="@+id/etConfirmPassword"
			android:inputType="textPassword"/>

    </LinearLayout>

</LinearLayout>
